samples/_failures_safe/1761429892_922fe1_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_d881e910.c: In function ‘read_matrix’:
./samples/SAFE/__tmp_d881e910.c:132: error: expected ‘(’ at end of input
./samples/SAFE/__tmp_d881e910.c:131:5: error: expected declaration or statement at end of input
  131 |     for
      |     ^~~
